// height_query.go - ç½‘ç»œé«˜åº¦æŸ¥è¯¢é€»è¾‘
// è´Ÿè´£æŸ¥è¯¢ç½‘ç»œä¸­å…¶ä»–èŠ‚ç‚¹çš„åŒºå—é“¾é«˜åº¦
package sync

import (
	"context"
	"fmt"
	"time"

	peer "github.com/libp2p/go-libp2p/core/peer"

	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/node"
	"github.com/weisyn/v1/pkg/interfaces/network"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//                           ç½‘ç»œé«˜åº¦æŸ¥è¯¢å®ç°
// ============================================================================

// queryNetworkHeightFromCandidates ä»æŒ‡å®šçš„å€™é€‰èŠ‚ç‚¹åˆ—è¡¨æŸ¥è¯¢ç½‘ç»œé«˜åº¦
//
// ğŸ¯ **å€™é€‰èŠ‚ç‚¹æŸ¥è¯¢ç­–ç•¥**ï¼š
// 1. ä½¿ç”¨ä¸Šæ¸¸å·²ç­›é€‰çš„å€™é€‰èŠ‚ç‚¹åˆ—è¡¨ï¼Œé¿å…é‡å¤é€‰æ‹©
// 2. å¯¹å€™é€‰èŠ‚ç‚¹è¿›è¡ŒWESåè®®è¿‡æ»¤ï¼Œè·³è¿‡éWESå¼•å¯¼èŠ‚ç‚¹
// 3. ä¾æ¬¡æŸ¥è¯¢è¿™äº›èŠ‚ç‚¹çš„é«˜åº¦ä¿¡æ¯
// 4. è¿”å›æŸ¥è¯¢æˆåŠŸçš„ç¬¬ä¸€ä¸ªèŠ‚ç‚¹çš„é«˜åº¦å’ŒèŠ‚ç‚¹ä¿¡æ¯
func queryNetworkHeightFromCandidates(
	ctx context.Context,
	candidatePeers []peer.ID,
	networkService network.Network,
	host node.Host,
	localChainInfo *types.ChainInfo,
	configProvider config.Provider,
	logger log.Logger,
) (uint64, peer.ID, error) {
	if logger != nil {
		logger.Debug("ğŸ” å¼€å§‹ç½‘ç»œé«˜åº¦æŸ¥è¯¢ï¼ˆä½¿ç”¨ä¸Šæ¸¸å€™é€‰èŠ‚ç‚¹ï¼‰")
	}

	// é˜¶æ®µ1: è¿‡æ»¤éWESèŠ‚ç‚¹ï¼ˆè·³è¿‡å…¬å…±å¼•å¯¼èŠ‚ç‚¹ï¼‰
	var weisynPeers []peer.ID
	for _, peerID := range candidatePeers {
		// éªŒè¯æ˜¯å¦ä¸ºWESåè®®èŠ‚ç‚¹
		if isValid, err := host.ValidateWESPeer(ctx, peerID); err != nil {
			if logger != nil {
				logger.Debugf("âš ï¸ WESèŠ‚ç‚¹éªŒè¯å¤±è´¥ï¼Œè·³è¿‡èŠ‚ç‚¹: %s, é”™è¯¯: %v", peerID.String()[:12]+"...", err)
			}
			continue
		} else if !isValid {
			if logger != nil {
				logger.Debugf("ğŸš« è·³è¿‡éWESèŠ‚ç‚¹: %s", peerID.String()[:12]+"...")
			}
			continue
		}
		weisynPeers = append(weisynPeers, peerID)
	}

	if len(weisynPeers) == 0 {
		if logger != nil {
			logger.Debug("ğŸ“Š è¿‡æ»¤åæ— å¯ç”¨WESèŠ‚ç‚¹ï¼Œè·³è¿‡ç½‘ç»œé«˜åº¦æŸ¥è¯¢")
		}
		return 0, "", fmt.Errorf("è¿‡æ»¤åæ— å¯ç”¨çš„WESèŠ‚ç‚¹")
	}

	if logger != nil {
		logger.Debugf("ğŸ“Š è¿‡æ»¤åå¯ç”¨WESèŠ‚ç‚¹: %d/%d ä¸ª", len(weisynPeers), len(candidatePeers))
	}

	closestPeers := weisynPeers

	// é˜¶æ®µ2: ä¼˜å…ˆçº§æŸ¥è¯¢èŠ‚ç‚¹é«˜åº¦
	// ğŸ¯ **ä¼˜åŒ–ç­–ç•¥**: ä¼˜å…ˆä½¿ç”¨ç¬¬ä¸€ä¸ªèŠ‚ç‚¹ä½œä¸ºé«˜åº¦æºï¼Œç¡®ä¿æ•°æ®åŒ…èŠ‚ç‚¹ä¼˜å…ˆçº§
	var bestHeight uint64
	var bestPeer peer.ID
	var firstSuccess bool = false

	if logger != nil {
		logger.Infof("ğŸ”„ å¼€å§‹ç½‘ç»œé«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨ï¼Œå€™é€‰èŠ‚ç‚¹: %dä¸ª", len(closestPeers))
	}

	for i, peerID := range closestPeers {
		if logger != nil {
			priority := "é«˜ä¼˜å…ˆçº§"
			if i > 0 {
				priority = "å¤‡ç”¨"
			}
			logger.Debugf("ğŸ“¡ æŸ¥è¯¢%sèŠ‚ç‚¹ %d/%d: %s", priority, i+1, len(closestPeers), peerID.String())
		}

		if logger != nil {
			logger.Debugf("ğŸ“ è°ƒç”¨é«˜åº¦æŸ¥è¯¢åè®®ï¼Œç›®æ ‡èŠ‚ç‚¹: %s", peerID.String()[:12]+"...")
		}

		height, err := queryPeerHeight(ctx, networkService, host, peerID, configProvider, logger)
		if err != nil {
			if logger != nil {
				logger.Warnf("âš ï¸ é«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨å¤±è´¥ï¼ŒèŠ‚ç‚¹: %s, é”™è¯¯: %v", peerID.String()[:12]+"...", err)
			}
			continue // å°è¯•ä¸‹ä¸€ä¸ªèŠ‚ç‚¹
		}

		if logger != nil {
			logger.Debugf("âœ… é«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨æˆåŠŸï¼ŒèŠ‚ç‚¹: %s, é«˜åº¦: %d", peerID.String()[:12]+"...", height)
		}

		if logger != nil {
			logger.Infof("âœ… æˆåŠŸè·å–èŠ‚ç‚¹é«˜åº¦: %d (æ¥æºèŠ‚ç‚¹: %s)", height, peerID.String())
		}

		// ä¼˜å…ˆä½¿ç”¨ç¬¬ä¸€ä¸ªæˆåŠŸçš„èŠ‚ç‚¹ï¼ˆæœ€é«˜ä¼˜å…ˆçº§ï¼‰
		if !firstSuccess {
			bestHeight = height
			bestPeer = peerID
			firstSuccess = true

			if logger != nil {
				logger.Infof("ğŸ¯ é€‰æ‹©ç¬¬ä¸€ä¸ªå¯ç”¨èŠ‚ç‚¹ä½œä¸ºé«˜åº¦æº: %d (èŠ‚ç‚¹: %s)", height, peerID.String())
			}

			// å¦‚æœæ˜¯ç¬¬ä¸€ä¸ªèŠ‚ç‚¹å°±æˆåŠŸäº†ï¼Œç›´æ¥è¿”å›ï¼ˆæœ€é«˜ä¼˜å…ˆçº§ï¼‰
			if i == 0 {
				return height, peerID, nil
			}
		}

		// å¦‚æœåç»­èŠ‚ç‚¹é«˜åº¦æ›´é«˜ï¼Œä»…ä½œè®°å½•ä½†ä¸æ›¿æ¢ï¼ˆä¿æŒç¬¬ä¸€ä¸ªèŠ‚ç‚¹çš„ä¼˜å…ˆçº§ï¼‰
		if height > bestHeight && logger != nil {
			logger.Debugf("ğŸ“Š å‘ç°æ›´é«˜èŠ‚ç‚¹é«˜åº¦: %d vs %dï¼Œä½†ä¿æŒç¬¬ä¸€ä¸ªèŠ‚ç‚¹ä¼˜å…ˆçº§", height, bestHeight)
		}
	}

	// è¿”å›ç¬¬ä¸€ä¸ªæˆåŠŸçš„èŠ‚ç‚¹ç»“æœ
	if firstSuccess {
		if logger != nil {
			logger.Infof("âœ… æœ€ç»ˆé€‰æ‹©ç½‘ç»œé«˜åº¦: %d (ä¼˜å…ˆçº§èŠ‚ç‚¹: %s)", bestHeight, bestPeer.String())
		}
		return bestHeight, bestPeer, nil
	}

	// æ‰€æœ‰èŠ‚ç‚¹éƒ½æŸ¥è¯¢å¤±è´¥
	return 0, "", fmt.Errorf("æ‰€æœ‰Kæ¡¶èŠ‚ç‚¹çš„é«˜åº¦æŸ¥è¯¢éƒ½å¤±è´¥äº†")
}

// queryPeerHeight æŸ¥è¯¢æŒ‡å®šèŠ‚ç‚¹çš„åŒºå—é“¾é«˜åº¦
//
// ğŸ¯ **ä½¿ç”¨æ ‡å‡†KBucketSyncåè®®è¿›è¡Œé«˜åº¦æŸ¥è¯¢**ï¼š
// 1. æ„å»ºKBucketSyncRequestï¼ˆä»…ç”¨äºé«˜åº¦æŸ¥è¯¢ï¼‰
// 2. ä½¿ç”¨ProtocolKBucketSyncåè®®é€šä¿¡
// 3. ä»IntelligentPaginationResponseä¸­æå–é«˜åº¦ä¿¡æ¯
// 4. ç»Ÿä¸€ä½¿ç”¨protobufåºåˆ—åŒ–ï¼Œé¿å…JSONä¾èµ–
func queryPeerHeight(
	ctx context.Context,
	networkService network.Network,
	host node.Host,
	peerID peer.ID,
	configProvider config.Provider,
	logger log.Logger,
) (uint64, error) {
	if logger != nil {
		logger.Debugf("ğŸ“¡ å‘èŠ‚ç‚¹ %s æŸ¥è¯¢åŒºå—é“¾é«˜åº¦ï¼ˆä½¿ç”¨KBucketSyncåè®®ï¼‰", peerID.String())
	}

	// ğŸ¯ **æ™ºèƒ½é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°è®¡ç®—**
	// é«˜åº¦æŸ¥è¯¢åªéœ€è¦åŸºæœ¬çš„å“åº”å¤´ä¿¡æ¯ï¼Œä¸éœ€è¦åŒºå—æ•°æ®ï¼Œå› æ­¤ä½¿ç”¨å¾ˆå°çš„å¤§å°é™åˆ¶
	var maxResponseSize uint32 = 1024 // é»˜è®¤1KBï¼šè¶³å¤Ÿå“åº”å¤´å’Œé«˜åº¦ä¿¡æ¯
	blockchainConfig := configProvider.GetBlockchain()
	if blockchainConfig != nil {
		// åŸºäºé€šç”¨é…ç½®æ™ºèƒ½è®¡ç®—é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°
		if blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
			// é«˜åº¦æŸ¥è¯¢å“åº”å¤§å° = é€šç”¨å“åº”å¤§å° / 1000ï¼ˆæå°æ¯”ä¾‹ï¼‰
			generalSize := blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
			maxResponseSize = generalSize / 1000

			// ç¡®ä¿åœ¨åˆç†èŒƒå›´å†…ï¼šæœ€å°512å­—èŠ‚ï¼Œæœ€å¤§4KB
			if maxResponseSize < 512 {
				maxResponseSize = 512
			} else if maxResponseSize > 4096 {
				maxResponseSize = 4096
			}
		} else if blockchainConfig.Sync.Advanced.IntelligentPagingThreshold > 0 {
			// å¤‡é€‰ï¼šåŸºäºæ™ºèƒ½åˆ†é¡µé˜ˆå€¼è®¡ç®—
			maxResponseSize = blockchainConfig.Sync.Advanced.IntelligentPagingThreshold / 1000
			if maxResponseSize < 1024 {
				maxResponseSize = 1024
			}
		}
	}

	if logger != nil {
		logger.Debugf("ğŸ“Š é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°é™åˆ¶: %d å­—èŠ‚", maxResponseSize)
	}

	// æ„å»ºKBucketSyncRequestï¼ˆä¸“ç”¨äºé«˜åº¦æŸ¥è¯¢ï¼‰
	request := &protocol.KBucketSyncRequest{
		RequestId:       fmt.Sprintf("height-query-%d", time.Now().UnixNano()),
		LocalHeight:     0,                          // é«˜åº¦æŸ¥è¯¢æ—¶è®¾ä¸º0
		RoutingKey:      []byte("height-query"),     // é«˜åº¦æŸ¥è¯¢è·¯ç”±é”®
		MaxResponseSize: maxResponseSize,            // ä»é…ç½®è·å–ï¼Œä»…éœ€è¦å“åº”å¤´ä¿¡æ¯
		RequesterPeerId: []byte(host.ID().String()), // æœ¬åœ°èŠ‚ç‚¹IDï¼ˆè¯·æ±‚è€…ï¼‰
		TargetHeight:    nil,                        // ä¸æŒ‡å®šç›®æ ‡é«˜åº¦ï¼Œè·å–å¯¹ç«¯å½“å‰é«˜åº¦
	}

	// åºåˆ—åŒ–è¯·æ±‚
	requestData, err := proto.Marshal(request)
	if err != nil {
		return 0, fmt.Errorf("åºåˆ—åŒ–é«˜åº¦æŸ¥è¯¢è¯·æ±‚å¤±è´¥: %w", err)
	}

	// é…ç½®ä¼ è¾“é€‰é¡¹ï¼ˆä»é…ç½®è·å–ï¼Œé«˜åº¦æŸ¥è¯¢ä½¿ç”¨è¾ƒçŸ­è¶…æ—¶ï¼‰
	var connectTimeout = 10 * time.Second
	var writeTimeout = 5 * time.Second
	var readTimeout = 10 * time.Second
	var maxRetries = 2
	var retryDelay = 1 * time.Second

	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.ConnectTimeout > 0 {
			connectTimeout = blockchainConfig.Sync.Advanced.ConnectTimeout / 2 // é«˜åº¦æŸ¥è¯¢ç”¨ä¸€åŠæ—¶é—´
		}
		if blockchainConfig.Sync.Advanced.WriteTimeout > 0 {
			writeTimeout = blockchainConfig.Sync.Advanced.WriteTimeout / 2
		}
		if blockchainConfig.Sync.Advanced.ReadTimeout > 0 {
			readTimeout = blockchainConfig.Sync.Advanced.ReadTimeout / 3 // é«˜åº¦æŸ¥è¯¢è¯»å–å¾ˆå¿«
		}
		if blockchainConfig.Sync.Advanced.MaxRetryAttempts > 0 {
			maxRetries = blockchainConfig.Sync.Advanced.MaxRetryAttempts
		}
		if blockchainConfig.Sync.Advanced.RetryDelay > 0 {
			retryDelay = blockchainConfig.Sync.Advanced.RetryDelay
		}
	}

	transportOpts := &types.TransportOptions{
		ConnectTimeout: connectTimeout,
		WriteTimeout:   writeTimeout,
		ReadTimeout:    readTimeout,
		MaxRetries:     maxRetries,
		RetryDelay:     retryDelay,
		BackoffFactor:  1.5,
	}

	// å‘é€ç½‘ç»œè¯·æ±‚ï¼ˆä½¿ç”¨æ ‡å‡†KBucketSyncåè®®ï¼‰
	responseData, err := networkService.Call(ctx, peerID, protocols.ProtocolKBucketSync, requestData, transportOpts)
	if err != nil {
		return 0, fmt.Errorf("KBucketé«˜åº¦æŸ¥è¯¢è°ƒç”¨å¤±è´¥: %w", err)
	}

	// è§£æIntelligentPaginationResponse
	response := &protocol.IntelligentPaginationResponse{}
	if err := proto.Unmarshal(responseData, response); err != nil {
		return 0, fmt.Errorf("è§£æé«˜åº¦æŸ¥è¯¢å“åº”å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”
	if response.RequestId != request.RequestId {
		return 0, fmt.Errorf("å“åº”RequestIDä¸åŒ¹é…: æœŸæœ›=%s, å®é™…=%s",
			request.RequestId, response.RequestId)
	}

	if !response.Success {
		errorMsg := "æœªçŸ¥é”™è¯¯"
		if response.ErrorMessage != nil {
			errorMsg = *response.ErrorMessage
		}
		return 0, fmt.Errorf("å¯¹ç«¯é«˜åº¦æŸ¥è¯¢å¤±è´¥: %s", errorMsg)
	}

	// ä»å“åº”ä¸­æå–é«˜åº¦ä¿¡æ¯
	// å¯¹ç«¯ä¼šåœ¨NextHeightå­—æ®µä¸­è¿”å›å…¶å½“å‰é«˜åº¦
	peerHeight := response.NextHeight

	if logger != nil {
		logger.Debugf("âœ… èŠ‚ç‚¹ %s é«˜åº¦æŸ¥è¯¢æˆåŠŸ: %dï¼ˆé€šè¿‡KBucketSyncåè®®ï¼‰",
			peerID.String(), peerHeight)
	}

	return peerHeight, nil
}
