package sync

import (
	"context"
	"fmt"

	peer "github.com/libp2p/go-libp2p/core/peer"
	"github.com/weisyn/v1/internal/core/chain/interfaces"
	core "github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/network"
	p2pi "github.com/weisyn/v1/pkg/interfaces/p2p"
	"github.com/weisyn/v1/pkg/interfaces/persistence"
)

func tryAutoReorgFromHello(
	ctx context.Context,
	peerID peer.ID,
	hello *helloV2Info,
	chainQuery persistence.ChainQuery,
	blockHashClient core.BlockHashServiceClient,
	forkHandler interfaces.InternalForkHandler,
	networkService network.Network,
	p2pService p2pi.Service,
	configProvider config.Provider,
	logger log.Logger,
) error {
	if hello == nil {
		return fmt.Errorf("hello is nil")
	}
	if forkHandler == nil {
		return fmt.Errorf("forkHandler æœªæ³¨å…¥ï¼Œæ— æ³•è‡ªåŠ¨ reorg")
	}
	// å…è®¸ç¥–å…ˆä¸º genesis(0)ï¼Œä½†å¿…é¡»æºå¸¦ 32 bytes çš„ç¥–å…ˆ hashï¼›å¦åˆ™è§†ä¸ºâ€œæœªæä¾›ç¥–å…ˆâ€
	if hello.commonAncestorHeight == 0 && len(hello.commonAncestorHash) != 32 {
		return fmt.Errorf("hello æœªæä¾› common ancestorï¼ˆancestor=0 ä¸”æ— æœ‰æ•ˆhashï¼‰ï¼Œæ— æ³•è‡ªåŠ¨ reorg")
	}
	if hello.remoteTipHeight <= hello.commonAncestorHeight {
		return nil
	}

	// é™åˆ¶è‡ªåŠ¨ reorg æ·±åº¦ï¼ˆé»˜è®¤ 1000ï¼Œå¯é…ç½®ï¼‰
	maxDepth := uint64(1000)
	if configProvider != nil {
		if bc := configProvider.GetBlockchain(); bc != nil && bc.Sync.Advanced.AutoReorgMaxDepth > 0 {
			maxDepth = uint64(bc.Sync.Advanced.AutoReorgMaxDepth)
		}
	}
	depth := hello.remoteTipHeight - hello.commonAncestorHeight
	if depth > maxDepth {
		return fmt.Errorf("auto reorg depth exceeded: depth=%d max=%d ancestor=%d remote_tip=%d",
			depth, maxDepth, hello.commonAncestorHeight, hello.remoteTipHeight)
	}

	// å¯é€‰ï¼šæ ¡éªŒå…±åŒç¥–å…ˆ hash ä¸€è‡´æ€§ï¼ˆé¿å…è¯¯åˆ¤ï¼‰
	if len(hello.commonAncestorHash) == 32 {
		if qs, ok := chainQuery.(persistence.QueryService); ok && qs != nil && blockHashClient != nil {
			blk, err := qs.GetBlockByHeight(ctx, hello.commonAncestorHeight)
			if err != nil {
				return fmt.Errorf("è¯»å–å…±åŒç¥–å…ˆåŒºå—å¤±è´¥: %w", err)
			}
			resp, err := blockHashClient.ComputeBlockHash(ctx, &core.ComputeBlockHashRequest{Block: blk})
			if err != nil || resp == nil || !resp.IsValid || len(resp.Hash) != 32 {
				return fmt.Errorf("è®¡ç®—å…±åŒç¥–å…ˆå“ˆå¸Œå¤±è´¥: %v", err)
			}
			if string(resp.Hash) != string(hello.commonAncestorHash) {
				return fmt.Errorf("å…±åŒç¥–å…ˆå“ˆå¸Œä¸ä¸€è‡´ï¼šlocal!=remote(height=%d)", hello.commonAncestorHeight)
			}
		}
	}

	start := hello.commonAncestorHeight + 1
	end := hello.remoteTipHeight
	if logger != nil {
		logger.Warnf("[TriggerSync] ğŸ” è‡ªåŠ¨reorgï¼šä¸‹è½½åˆ†å‰æ®µ blocks [%d..%d] from peer=%s",
			start, end, peerID.String()[:8])
	}

	forkBlocks := make(map[uint64]*core.Block, 0)
	next := start
	for next <= end {
		blocks, err := fetchBlockRange(ctx, peerID, next, end, networkService, p2pService, configProvider, logger)
		if err != nil {
			return fmt.Errorf("ä¸‹è½½åˆ†å‰æ®µå¤±è´¥: %w", err)
		}
		if len(blocks) == 0 {
			return fmt.Errorf("ä¸‹è½½åˆ†å‰æ®µè¿”å›ç©ºæ‰¹æ¬¡: next=%d end=%d", next, end)
		}
		lastH := uint64(0)
		for _, b := range blocks {
			if b == nil || b.Header == nil {
				continue
			}
			forkBlocks[b.Header.Height] = b
			if b.Header.Height > lastH {
				lastH = b.Header.Height
			}
		}
		if lastH < next {
			return fmt.Errorf("ä¸‹è½½åˆ†å‰æ®µæœªæ¨è¿›: next=%d last=%d", next, lastH)
		}
		next = lastH + 1
	}

	forkTip := forkBlocks[end]
	if forkTip == nil {
		return fmt.Errorf("åˆ†å‰æ®µç¼ºå¤± forkTip: height=%d", end)
	}

	if logger != nil {
		logger.Warnf("[TriggerSync] ğŸ” è‡ªåŠ¨reorgï¼šè°ƒç”¨ ForkHandler æ‰§è¡Œé‡ç»„ fork_height=%d new_tip=%d",
			hello.commonAncestorHeight, forkTip.Header.Height)
	}
	return forkHandler.HandleForkWithExternalBlocks(ctx, hello.commonAncestorHeight, forkTip, forkBlocks)
}
