// height_query.go - ç½‘ç»œé«˜åº¦æŸ¥è¯¢é€»è¾‘
// è´Ÿè´£æŸ¥è¯¢ç½‘ç»œä¸­å…¶ä»–èŠ‚ç‚¹çš„åŒºå—é“¾é«˜åº¦
package sync

import (
	"context"
	"fmt"
	"time"

	libnetwork "github.com/libp2p/go-libp2p/core/network"
	peer "github.com/libp2p/go-libp2p/core/peer"

	"github.com/weisyn/v1/internal/config/node"
	"github.com/weisyn/v1/pb/network/protocol"
	"github.com/weisyn/v1/pkg/constants/protocols"
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/network"
	p2pi "github.com/weisyn/v1/pkg/interfaces/p2p"
	"github.com/weisyn/v1/pkg/types"
	"google.golang.org/protobuf/proto"
)

// ============================================================================
//                           ç½‘ç»œé«˜åº¦æŸ¥è¯¢å®ç°
// ============================================================================

// queryNetworkHeightFromCandidates ä»æŒ‡å®šçš„å€™é€‰èŠ‚ç‚¹åˆ—è¡¨æŸ¥è¯¢ç½‘ç»œé«˜åº¦
//
// ğŸ¯ **å€™é€‰èŠ‚ç‚¹æŸ¥è¯¢ç­–ç•¥**ï¼š
// 1. ä½¿ç”¨ä¸Šæ¸¸å·²ç­›é€‰çš„å€™é€‰èŠ‚ç‚¹åˆ—è¡¨ï¼Œé¿å…é‡å¤é€‰æ‹©
// 2. å¯¹å€™é€‰èŠ‚ç‚¹è¿›è¡ŒWESåè®®è¿‡æ»¤ï¼Œè·³è¿‡éWESå¼•å¯¼èŠ‚ç‚¹
// 3. ä¾æ¬¡æŸ¥è¯¢è¿™äº›èŠ‚ç‚¹çš„é«˜åº¦ä¿¡æ¯
// 4. âœ… é€‰æ‹©â€œæœ€é«˜é«˜åº¦â€çš„æˆåŠŸèŠ‚ç‚¹ä½œä¸ºç½‘ç»œé«˜åº¦ï¼ˆé¿å…è¢«ä½é«˜åº¦èŠ‚ç‚¹è¯¯å¯¼ï¼‰
func queryNetworkHeightFromCandidates(
	ctx context.Context,
	candidatePeers []peer.ID,
	networkService network.Network,
	p2pService p2pi.Service,
	localChainInfo *types.ChainInfo,
	configProvider config.Provider,
	logger log.Logger,
) (uint64, peer.ID, error) {
	if logger != nil {
		logger.Debug("ğŸ” å¼€å§‹ç½‘ç»œé«˜åº¦æŸ¥è¯¢ï¼ˆä½¿ç”¨ä¸Šæ¸¸å€™é€‰èŠ‚ç‚¹ï¼‰")
	}

	// âœ… é‡è¦ï¼šä¸è¦åœ¨è¿™é‡Œç”¨â€œconnectedness/protocol cacheâ€åšç¡¬è¿‡æ»¤ã€‚
	// åŸå› ï¼š
	// - P2P çš„ discoveryâ†’dialâ†’identifyâ†’protocols æ˜¯æ¸è¿›å¼çš„ï¼Œå¯åŠ¨æ—©æœŸ/è·¨ç½‘åœºæ™¯åè®®ç¼“å­˜å¯èƒ½ä¸ºç©ºï¼›
	// - è¿‡æ—©è¿‡æ»¤ä¼šæŠŠçœŸå®ä¸šåŠ¡èŠ‚ç‚¹â€œç¬æ€æ€æ­»â€ï¼Œå¯¼è‡´é˜¶æ®µ1.5ç›´æ¥å¤±è´¥ï¼Œç³»ç»Ÿæ— æ³•è¿›å…¥é˜¶æ®µ2åš hello/fork åˆ¤å®šã€‚
	//
	// åšæ³•ï¼šç›´æ¥å¯¹å€™é€‰æ‰§è¡Œ queryPeerHeightï¼ˆå®ƒå†…éƒ¨æœ‰é“¾èº«ä»½æ ¡éªŒä¸åèŠ‚ç‚¹æ ‡è®°ï¼‰ï¼Œå¤±è´¥å°±æ¢ä¸‹ä¸€ä¸ªã€‚
	closestPeers := candidatePeers

	// âœ… SYNC-201ä¿®å¤ï¼šæ”¶é›†æ‰€æœ‰æˆåŠŸæŸ¥è¯¢çš„é«˜åº¦ï¼Œä½¿ç”¨ä¸­ä½æ•°éªŒè¯
	type heightResponse struct {
		peer   peer.ID
		height uint64
	}
	var responses []heightResponse

	if logger != nil {
		logger.Infof("ğŸ”„ å¼€å§‹ç½‘ç»œé«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨ï¼Œå€™é€‰èŠ‚ç‚¹: %dä¸ª", len(closestPeers))
	}

	for i, peerID := range closestPeers {
		if logger != nil {
			priority := "é«˜ä¼˜å…ˆçº§"
			if i > 0 {
				priority = "å¤‡ç”¨"
			}
			logger.Debugf("ğŸ“¡ æŸ¥è¯¢%sèŠ‚ç‚¹ %d/%d: %s", priority, i+1, len(closestPeers), peerID.String())
		}

		if logger != nil {
			logger.Debugf("ğŸ“ è°ƒç”¨é«˜åº¦æŸ¥è¯¢åè®®ï¼Œç›®æ ‡èŠ‚ç‚¹: %s", peerID.String()[:12]+"...")
		}

		height, err := queryPeerHeight(ctx, networkService, p2pService, peerID, configProvider, logger)
		if err != nil {
			// âœ… SYNC-003ä¿®å¤ï¼šè®°å½•é«˜åº¦æŸ¥è¯¢å¤±è´¥åŸå› ï¼ˆç»†åŒ–åˆ†ç±»ï¼‰
			recordSyncFailure(peerID, "height_query", ClassifyError(err), err.Error(), logger)
			if logger != nil {
				logger.Warnf("âš ï¸ é«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨å¤±è´¥ï¼ŒèŠ‚ç‚¹: %s, é”™è¯¯: %v", peerID.String()[:12]+"...", err)
			}
			// è¯¥èŠ‚ç‚¹è¿ç»­å¤±è´¥ä¼šè§¦å‘"åä¸Šæ¸¸å¿«é€Ÿåˆ‡æ¢"ï¼Œé¿å…ç²˜ä½ä¸å¥åº·èŠ‚ç‚¹
			recordUpstreamFailure(peerID, logger)
			continue // å°è¯•ä¸‹ä¸€ä¸ªèŠ‚ç‚¹
		}

		// æŸ¥è¯¢æˆåŠŸï¼šæ›´æ–°/åˆ·æ–°ä¸Šæ¸¸è®°å¿†å¹¶æ¸…é›¶å¤±è´¥è®¡æ•°
		recordUpstreamSuccess(peerID)
		
		// ğŸ”¥ æŸ¥è¯¢æˆåŠŸï¼Œé‡ç½®èŠ‚ç‚¹å¥åº·åº¦ï¼ˆæ¸…é™¤ç†”æ–­çŠ¶æ€ï¼‰
		ResetPeerHealth(peerID)

		if logger != nil {
			logger.Debugf("âœ… é«˜åº¦æŸ¥è¯¢åè®®è°ƒç”¨æˆåŠŸï¼ŒèŠ‚ç‚¹: %s, é«˜åº¦: %d", peerID.String()[:12]+"...", height)
		}

		responses = append(responses, heightResponse{
			peer:   peerID,
			height: height,
		})
	}

	if len(responses) == 0 {
		return 0, "", fmt.Errorf("æ‰€æœ‰å€™é€‰èŠ‚ç‚¹çš„é«˜åº¦æŸ¥è¯¢éƒ½å¤±è´¥äº†")
	}

	// âœ… SYNC-201ä¿®å¤ï¼šè®¡ç®—ä¸­ä½æ•°é«˜åº¦ï¼ˆé˜²æ­¢è¢«å•ä¸€æ¶æ„èŠ‚ç‚¹è¯¯å¯¼ï¼‰
	heights := make([]uint64, len(responses))
	for i, r := range responses {
		heights[i] = r.height
		}

	// ç®€å•æ’åºç”¨äºä¸­ä½æ•°è®¡ç®—
	for i := 0; i < len(heights); i++ {
		for j := i + 1; j < len(heights); j++ {
			if heights[i] > heights[j] {
				heights[i], heights[j] = heights[j], heights[i]
			}
		}
	}
	
	medianHeight := heights[len(heights)/2]

	// âœ… é€‰æ‹©æœ€æ¥è¿‘ä¸­ä½æ•°ä¸”é«˜åº¦æœ€é«˜çš„èŠ‚ç‚¹ä½œä¸ºæ•°æ®æº
	var bestPeer peer.ID
	var bestHeight uint64
	for _, r := range responses {
		// åœ¨ä¸­ä½æ•°Â±10çš„èŒƒå›´å†…é€‰æ‹©æœ€é«˜é«˜åº¦
		if r.height >= medianHeight && r.height <= medianHeight+10 {
			if r.height > bestHeight {
				bestHeight = r.height
				bestPeer = r.peer
			}
		}
	}

	if bestPeer == "" {
		// å¦‚æœæ²¡æœ‰åœ¨èŒƒå›´å†…çš„ï¼Œç›´æ¥ä½¿ç”¨ä¸­ä½æ•°å¯¹åº”çš„èŠ‚ç‚¹
		for _, r := range responses {
			if r.height == medianHeight {
				bestPeer = r.peer
				bestHeight = medianHeight
				break
			}
		}
	}

		if logger != nil {
		logger.Infof("âœ… é«˜åº¦ä¸€è‡´æ€§æ£€æŸ¥: æŸ¥è¯¢=%dä¸ªèŠ‚ç‚¹, ä¸­ä½æ•°=%d, æœ€ç»ˆé€‰æ‹©=%d (èŠ‚ç‚¹: %s)", 
			len(responses), medianHeight, bestHeight, bestPeer.String()[:12]+"...")
		}

		return bestHeight, bestPeer, nil
}

// queryPeerHeight æŸ¥è¯¢æŒ‡å®šèŠ‚ç‚¹çš„åŒºå—é“¾é«˜åº¦
//
// ğŸ¯ **ä½¿ç”¨æ ‡å‡†KBucketSyncåè®®è¿›è¡Œé«˜åº¦æŸ¥è¯¢**ï¼š
// 1. æ„å»ºKBucketSyncRequestï¼ˆä»…ç”¨äºé«˜åº¦æŸ¥è¯¢ï¼‰
// 2. ä½¿ç”¨ProtocolKBucketSyncåè®®é€šä¿¡
// 3. ä»IntelligentPaginationResponseä¸­æå–é«˜åº¦ä¿¡æ¯
// 4. ç»Ÿä¸€ä½¿ç”¨protobufåºåˆ—åŒ–ï¼Œé¿å…JSONä¾èµ–
func queryPeerHeight(
	ctx context.Context,
	networkService network.Network,
	p2pService p2pi.Service,
	peerID peer.ID,
	configProvider config.Provider,
	logger log.Logger,
) (uint64, error) {
	if logger != nil {
		logger.Debugf("ğŸ“¡ å‘èŠ‚ç‚¹ %s æŸ¥è¯¢åŒºå—é“¾é«˜åº¦ï¼ˆä½¿ç”¨KBucketSyncåè®®ï¼‰", peerID.String())
	}

	// ğŸ¯ **æ™ºèƒ½é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°è®¡ç®—**
	// é«˜åº¦æŸ¥è¯¢åªéœ€è¦åŸºæœ¬çš„å“åº”å¤´ä¿¡æ¯ï¼Œä¸éœ€è¦åŒºå—æ•°æ®ï¼Œå› æ­¤ä½¿ç”¨å¾ˆå°çš„å¤§å°é™åˆ¶
	var maxResponseSize uint32 = 1024 // é»˜è®¤1KBï¼šè¶³å¤Ÿå“åº”å¤´å’Œé«˜åº¦ä¿¡æ¯
	blockchainConfig := configProvider.GetBlockchain()
	if blockchainConfig != nil {
		// åŸºäºé€šç”¨é…ç½®æ™ºèƒ½è®¡ç®—é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°
		if blockchainConfig.Sync.Advanced.MaxResponseSizeBytes > 0 {
			// é«˜åº¦æŸ¥è¯¢å“åº”å¤§å° = é€šç”¨å“åº”å¤§å° / 1000ï¼ˆæå°æ¯”ä¾‹ï¼‰
			generalSize := blockchainConfig.Sync.Advanced.MaxResponseSizeBytes
			maxResponseSize = generalSize / 1000

			// ç¡®ä¿åœ¨åˆç†èŒƒå›´å†…ï¼šæœ€å°512å­—èŠ‚ï¼Œæœ€å¤§4KB
			if maxResponseSize < 512 {
				maxResponseSize = 512
			} else if maxResponseSize > 4096 {
				maxResponseSize = 4096
			}
		} else if blockchainConfig.Sync.Advanced.IntelligentPagingThreshold > 0 {
			// å¤‡é€‰ï¼šåŸºäºæ™ºèƒ½åˆ†é¡µé˜ˆå€¼è®¡ç®—
			maxResponseSize = blockchainConfig.Sync.Advanced.IntelligentPagingThreshold / 1000
			if maxResponseSize < 1024 {
				maxResponseSize = 1024
			}
		}
	}

	if logger != nil {
		logger.Debugf("ğŸ“Š é«˜åº¦æŸ¥è¯¢å“åº”å¤§å°é™åˆ¶: %d å­—èŠ‚", maxResponseSize)
	}

	// æ„å»ºKBucketSyncRequestï¼ˆä¸“ç”¨äºé«˜åº¦æŸ¥è¯¢ï¼‰
	request := &protocol.KBucketSyncRequest{
		RequestId:       fmt.Sprintf("height-query-%d", time.Now().UnixNano()),
		LocalHeight:     0,                                       // é«˜åº¦æŸ¥è¯¢æ—¶è®¾ä¸º0
		RoutingKey:      []byte("height-query"),                  // é«˜åº¦æŸ¥è¯¢è·¯ç”±é”®
		MaxResponseSize: maxResponseSize,                         // ä»é…ç½®è·å–ï¼Œä»…éœ€è¦å“åº”å¤´ä¿¡æ¯
		RequesterPeerId: []byte(p2pService.Host().ID().String()), // æœ¬åœ°èŠ‚ç‚¹IDï¼ˆè¯·æ±‚è€…ï¼‰
		TargetHeight:    nil,                                     // ä¸æŒ‡å®šç›®æ ‡é«˜åº¦ï¼Œè·å–å¯¹ç«¯å½“å‰é«˜åº¦
	}

	// âœ… v2 çº¦æŸï¼šè¯·æ±‚å°½é‡æºå¸¦æœ¬åœ°é“¾èº«ä»½ï¼ˆç”¨äºå¯¹ç«¯æ ¡éªŒï¼‰ï¼›è‹¥æœ¬åœ°é“¾èº«ä»½ä¸å¯ç”¨åˆ™ä¿æŒå…¼å®¹ï¼ˆä¸ fail-fastï¼‰
	if localID, err := GetLocalChainIdentity(ctx, configProvider, nil); err == nil && localID.IsValid() {
		request.ChainIdentity = node.ToProtoChainIdentity(localID)
	}

	// åºåˆ—åŒ–è¯·æ±‚
	requestData, err := proto.Marshal(request)
	if err != nil {
		return 0, fmt.Errorf("åºåˆ—åŒ–é«˜åº¦æŸ¥è¯¢è¯·æ±‚å¤±è´¥: %w", err)
	}

	// é…ç½®ä¼ è¾“é€‰é¡¹ï¼ˆä»é…ç½®è·å–ï¼Œé«˜åº¦æŸ¥è¯¢ä½¿ç”¨è¾ƒçŸ­è¶…æ—¶ï¼‰
	var connectTimeout = 10 * time.Second
	var writeTimeout = 5 * time.Second
	var readTimeout = 10 * time.Second
	var maxRetries = 2
	var retryDelay = 1 * time.Second

	if blockchainConfig != nil {
		if blockchainConfig.Sync.Advanced.ConnectTimeout > 0 {
			connectTimeout = blockchainConfig.Sync.Advanced.ConnectTimeout / 2 // é«˜åº¦æŸ¥è¯¢ç”¨ä¸€åŠæ—¶é—´
		}
		if blockchainConfig.Sync.Advanced.WriteTimeout > 0 {
			writeTimeout = blockchainConfig.Sync.Advanced.WriteTimeout / 2
		}
		if blockchainConfig.Sync.Advanced.ReadTimeout > 0 {
			readTimeout = blockchainConfig.Sync.Advanced.ReadTimeout / 3 // é«˜åº¦æŸ¥è¯¢è¯»å–å¾ˆå¿«
		}
		if blockchainConfig.Sync.Advanced.MaxRetryAttempts > 0 {
			maxRetries = blockchainConfig.Sync.Advanced.MaxRetryAttempts
		}
		if blockchainConfig.Sync.Advanced.RetryDelay > 0 {
			retryDelay = blockchainConfig.Sync.Advanced.RetryDelay
		}
	}

	transportOpts := &types.TransportOptions{
		ConnectTimeout: connectTimeout,
		WriteTimeout:   writeTimeout,
		ReadTimeout:    readTimeout,
		MaxRetries:     maxRetries,
		RetryDelay:     retryDelay,
		BackoffFactor:  1.5,
	}

	// å‘é€ç½‘ç»œè¯·æ±‚ï¼ˆä½¿ç”¨æ ‡å‡†KBucketSyncåè®®ï¼‰
	responseData, err := networkService.Call(ctx, peerID, protocols.ProtocolKBucketSync, requestData, transportOpts)
	if err != nil {
		return 0, fmt.Errorf("kBucketé«˜åº¦æŸ¥è¯¢è°ƒç”¨å¤±è´¥: %w", err)
	}

	// è§£æIntelligentPaginationResponse
	response := &protocol.IntelligentPaginationResponse{}
	if err := proto.Unmarshal(responseData, response); err != nil {
		return 0, fmt.Errorf("è§£æé«˜åº¦æŸ¥è¯¢å“åº”å¤±è´¥: %w", err)
	}

	// éªŒè¯å“åº”
	if response.RequestId != request.RequestId {
		return 0, fmt.Errorf("å“åº”RequestIDä¸åŒ¹é…: æœŸæœ›=%s, å®é™…=%s",
			request.RequestId, response.RequestId)
	}

	if !response.Success {
		errorMsg := "æœªçŸ¥é”™è¯¯"
		if response.ErrorMessage != nil {
			errorMsg = *response.ErrorMessage
		}
		return 0, fmt.Errorf("å¯¹ç«¯é«˜åº¦æŸ¥è¯¢å¤±è´¥: %s", errorMsg)
	}

	// âœ… v2ï¼šå¦‚æœå¯¹ç«¯å›ä¼  ChainIdentityï¼Œåˆ™æœ¬åœ°å¿…é¡»æ ¡éªŒåŒé“¾ï¼Œå¹¶ç¼“å­˜åˆ° peerstore ä¾› Kæ¡¶å‡†å…¥å¤ç”¨
	if response.ChainIdentity != nil {
		if localID, err := GetLocalChainIdentity(ctx, configProvider, nil); err == nil && localID.IsValid() {
			remoteID := node.FromProtoChainIdentity(response.ChainIdentity)
			if !remoteID.IsValid() || !localID.IsSameChain(remoteID) {
				MarkBadPeer(peerID)
				recordUpstreamFailure(peerID, logger)
				return 0, fmt.Errorf("é«˜åº¦æŸ¥è¯¢å“åº”é“¾èº«ä»½ä¸åŒ¹é…: remote=%v local=%v", remoteID, localID)
			}
			// åŒé“¾ï¼šå†™å…¥ peerstore ç¼“å­˜ï¼ˆç³»ç»Ÿè·¯å¾„ï¼‰
			cachePeerChainIdentity(p2pService, peerID, remoteID)
		}
	}

	// ä»å“åº”ä¸­æå–é«˜åº¦ä¿¡æ¯
	// å¯¹ç«¯ä¼šåœ¨NextHeightå­—æ®µä¸­è¿”å›å…¶å½“å‰é«˜åº¦
	peerHeight := response.NextHeight
	
	// ğŸ”¥ æŸ¥è¯¢æˆåŠŸï¼Œé‡ç½®èŠ‚ç‚¹å¥åº·åº¦
	ResetPeerHealth(peerID)

	if logger != nil {
		logger.Debugf("âœ… èŠ‚ç‚¹ %s é«˜åº¦æŸ¥è¯¢æˆåŠŸ: %dï¼ˆé€šè¿‡KBucketSyncåè®®ï¼‰",
			peerID.String(), peerHeight)
	}

	return peerHeight, nil
}

// validateWESPeer éªŒè¯èŠ‚ç‚¹æ˜¯å¦ä¸ºWESä¸šåŠ¡èŠ‚ç‚¹
// åŸºäºåè®®èƒ½åŠ›æ£€æŸ¥å®ç°ç®€å•çš„èŠ‚ç‚¹åˆ†ç±»
func validateWESPeer(ctx context.Context, p2pService p2pi.Service, peerID peer.ID, configProvider config.Provider) (bool, error) {
	if p2pService == nil {
		return false, fmt.Errorf("p2p service not available")
	}

	host := p2pService.Host()
	if host == nil {
		return false, fmt.Errorf("libp2p host not available")
	}

	// æ£€æŸ¥èŠ‚ç‚¹æ˜¯å¦å·²è¿æ¥
	if host.Network().Connectedness(peerID) != libnetwork.Connected {
		// å¦‚æœæœªè¿æ¥ï¼Œå¿«é€Ÿè¿”å›falseï¼Œé¿å…è§¦å‘è¿æ¥ï¼ˆä¿æŒè½»é‡çº§ï¼‰
		return false, nil
	}

	// è·å–èŠ‚ç‚¹æ”¯æŒçš„åè®®
	peerProtocols, err := host.Peerstore().GetProtocols(peerID)
	if err != nil {
		return false, fmt.Errorf("failed to get protocols for peer %s: %v", peerID, err)
	}

	// âœ… ç”Ÿäº§çº§ WES èŠ‚ç‚¹è¯†åˆ«ï¼ˆç”¨äºåŒæ­¥/é«˜åº¦æŸ¥è¯¢ï¼‰
	//
	// è¯´æ˜ï¼š
	// - é«˜åº¦æŸ¥è¯¢èµ°çš„æ˜¯ KBucketSyncï¼ˆè§ queryPeerHeight ä½¿ç”¨ ProtocolKBucketSyncï¼‰ã€‚
	// - ä¹‹å‰è¿™é‡Œé”™è¯¯åœ°ç”¨ ProtocolBlockSubmission ä½œä¸ºâ€œWES èŠ‚ç‚¹â€åˆ¤å®šæ¡ä»¶ï¼Œ
	//   ä¼šå¯¼è‡´â€œå·²å…¥Kæ¡¶çš„ weisyn èŠ‚ç‚¹â€åœ¨åŒæ­¥é˜¶æ®µ1.5è¢«å†æ¬¡è¿‡æ»¤æ‰ï¼Œä»è€Œå‡ºç°ï¼š
	//   [TriggerSync] ç½‘ç»œé«˜åº¦æŸ¥è¯¢å¤±è´¥: è¿‡æ»¤åæ— å¯ç”¨çš„WESèŠ‚ç‚¹
	//
	// ç­–ç•¥ï¼šåªè¦å¯¹ç«¯æ”¯æŒä»»ä¸€ weisyn çš„åŸºç¡€/åŒæ­¥åè®®å³å¯è®¤ä¸ºæ˜¯ WES ä¸šåŠ¡èŠ‚ç‚¹ã€‚
	candidates := []string{
		// åŸºç¡€
		protocols.ProtocolNodeInfo,
		protocols.ProtocolHeartbeat,

		// åŒæ­¥ç›¸å…³ï¼ˆé«˜åº¦æŸ¥è¯¢/æ‹‰å—ä¾èµ–ï¼‰
		protocols.ProtocolKBucketSync,
		protocols.ProtocolRangePaginated,
		protocols.ProtocolBlockSync,
		protocols.ProtocolHeaderSync,
		protocols.ProtocolStateSync,

		// å…±è¯†æäº¤ï¼ˆå¯é€‰ï¼‰
		protocols.ProtocolBlockSubmission,
	}

	ns := ""
	if configProvider != nil {
		func() {
			defer func() { _ = recover() }()
			ns = configProvider.GetNetworkNamespace()
		}()
	}

	match := func(sp, base string) bool {
		if sp == base {
			return true
		}
		if ns != "" {
			return sp == protocols.QualifyProtocol(base, ns)
		}
		return false
	}

	for _, p := range peerProtocols {
		sp := string(p)
		for _, base := range candidates {
			if match(sp, base) {
				return true, nil
			}
		}
	}

	// ä¸æ”¯æŒWESæ ¸å¿ƒåè®®ï¼Œè®¤ä¸ºæ˜¯å¤–éƒ¨èŠ‚ç‚¹
	return false, nil
}
